--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -9,32 +9,7 @@
   background-size: cover !important;
 	background-position: center !important;
 }
-/* Nitro Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-premium {
-    background: url(https://discordia.me/uploads/nitro/nitrobadge.png) 84% 84% /cover !important;
-    margin-right: 0;
-    padding-right: 8px;
-}
-/* Hypersquad Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-hypesquad {
-    background-image: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg) !important;
-}
-/* Partner Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-partner {
-    background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg) !important;
-}
-#user-profile-modal .header .header-info .profile-badge {
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    height: 52px;
-    width: 72px;
-    position: absolute;
-    left: -3px !important;
-    top: 4px;
-    margin-bottom: 0px !important;
-    background-size: cover !important;
-}
+
 .theme-dark .chat,.container-RYiLUQ,.guilds-wrapper .guilds,.typeMacOS-3IiWed,.titleBar-3_fDwJ,.theme-dark #friends,.private-channels {
     background-color: rgba(0,0,0,0.4) !important;
 }
@@ -124,7 +99,13 @@
     background: #019000;
     border: 2.4px solid #5BA949;
 }
-#user-profile-modal {
+.topSectionPlaying-3jAH9b {
+    background: rgba(0, 0, 255,0.4);
+}
+.topSectionNormal-2LlRG1 {
+    background-color: rgba(0, 0, 0,0.1);
+}
+.root-2sNHUF {
     background: url(https://www.dualshockers.com/wp-content/uploads/2013/10/General-Luigi-Masthead-e1364200242526-ds1-670x363-constrain.jpg) 30% 30%/cover !important;
 }
 #user-profile-modal .guilds .section+.section {
@@ -146,7 +127,7 @@
 #user-profile-modal .tab-bar .tab-bar-item {
     color: white;
 }
-#user-profile-modal .tab-bar .tab-bar-item.selected {
+.tab-bar.tabBar-2z50ux .tabBarItem-1Lg555.selected {
     border-bottom-color: #5BA949 !important;
     color: white;
     font-weight: bold;
@@ -154,16 +135,19 @@
 #user-profile-modal .guilds .guild .guild-name {
     color: white;
 }
-#user-profile-modal .guilds .avatar-large {
+.listAvatar-MpHQ5z {
     border: 3px solid #284A12;
     background-color: #019000;
     color: white;
 }
-#user-profile-modal .guilds .guild:hover {
+.theme-dark .body-3_tdh6 {
+   background: transparent;
+}
+.theme-dark .listRow-1wEi-U:hover {
     background: #284A12;
     color: black !important;
 }
-#user-profile-modal .guilds .guild .guild-nick {
+.guildNick-1oZKE3, .listName-1Xr1Jk {
     color: white;
     font-size: 14px;
 }
@@ -233,16 +217,16 @@
     color: white;
     border: 3px inset #284A12;
 }
-#user-profile-modal .guilds .section .section-header {
+.userInfoSectionHeader-pmdPGs {
     color: white;
     font-size: 17px;
 }
-#user-profile-modal .guilds .section .connected-accounts .connected-account {
+ .theme-dark .connectedAccount-3mKaTA {
     border: 5px outset #284A12;
     border-radius: 1px;
-    background: #019000; 
+    background: #019000  !important; 
 }
-#user-profile-modal .guilds .section .connected-accounts .connected-account .connected-account-name-inner .connected-account-name {
+.connectedAccountName-3EFj01 {
     color: white;
     font-size: 19px;
     text-shadow: 3px 2px 2px #000;
@@ -259,7 +243,10 @@
 }
 /* LAST BUT NOT LEAST PART, THE USER POPOUT AND USER PROFILE MODAL */
 .headerNormal-1cioxU,.body-3rkFrF,.footer-2J5zqP {
-    background: rgba(40,74,18,0.6);
+    background: rgba(40,74,18,0.6) !important;
+}
+.headerPlaying-2eYqm9 {
+    background: rgba(0, 0, 255,0.3) !important;
 }
 .botTagInvert-gorWR_ {
     background: #019000;
@@ -273,7 +260,7 @@
     color: white;
     border: 3px solid #019000;
     background: url(http://pre15.deviantart.net/962e/th/pre/f/2014/009/2/5/minimal_luigi__2560x1440__by_zachthesloth-d71js90.png) -80px -80px/cover !important;
-    background-position: -621px !important;
+    background-position: 513px !important;
 }
 .member-roles .member-role>.name{color:#FFF;}
 .member-roles .member-role{background-color:currentColor!important;border:4px solid black !important;}
@@ -2175,4 +2162,9 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .invite-button-icon.accepted {
     background-color: rgb(40,74,18);
     border: none;
+}
+.mask-2vyqAW {
+    border-radius: 1;
+    -webkit-mask: none;
+    mask: none;
 }
