--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -10,32 +10,6 @@
   background-size: cover !important;
 	background-position: center !important;
 }
-/* Nitro Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-premium {
-    background: url(https://discordia.me/uploads/nitro/nitrobadge.png) 84% 84% /cover !important;
-    margin-right: 0;
-    padding-right: 8px;
-}
-/* Hypersquad Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-hypesquad {
-    background-image: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg) !important;
-}
-/* Partner Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-partner {
-    background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg) !important;
-}
-#user-profile-modal .header .header-info .profile-badge {
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    height: 52px;
-    width: 72px;
-    position: absolute;
-    left: -3px !important;
-    top: 4px;
-    margin-bottom: 0px !important;
-    background-size: cover !important;
-}
 .theme-dark .chat,.container-RYiLUQ,.guilds-wrapper .guilds,.typeMacOS-3IiWed,.titleBar-3_fDwJ,.theme-dark #friends,.private-channels {
     background-color: rgba(0,0,0,0.4) !important;
 }
@@ -126,7 +100,13 @@
     background: #F14E91;
     border: 2.4px solid #F33C88;
 }
-#user-profile-modal {
+.topSectionPlaying-3jAH9b {
+    background: rgba(0, 0, 255,0.4);
+}
+.topSectionNormal-2LlRG1 {
+    background-color: rgba(0, 0, 0,0.1);
+}
+.root-2sNHUF {
     background: url(http://img03.deviantart.net/4058/i/2011/346/2/9/princess_peach_wallpaper_by_xxxmikanbouyaxxx-d4iy1vj.png) 30% 30%/cover !important;
 }
 #user-profile-modal .guilds .section+.section {
@@ -148,7 +128,7 @@
 #user-profile-modal .tab-bar .tab-bar-item {
     color: white;
 }
-#user-profile-modal .tab-bar .tab-bar-item.selected {
+.tab-bar.tabBar-2z50ux .tabBarItem-1Lg555.selected {
     border-bottom-color: #F33C88 !important;
     color: white;
     font-weight: bold;
@@ -156,16 +136,19 @@
 #user-profile-modal .guilds .guild .guild-name {
     color: white;
 }
-#user-profile-modal .guilds .avatar-large {
+.theme-dark .body-3_tdh6 {
+   background: transparent;
+}
+.listAvatar-MpHQ5z {
     border: 3px solid #F599B2;
     background-color: #F14E91;
     color: white;
 }
-#user-profile-modal .guilds .guild:hover {
+.theme-dark .listRow-1wEi-U:hover {
     background: #F14E91;
     color: black !important;
 }
-#user-profile-modal .guilds .guild .guild-nick {
+.guildNick-1oZKE3, .listName-1Xr1Jk {
     color: white;
     font-size: 14px;
 }
@@ -235,16 +218,16 @@
     color: white;
     border: 3px inset #F599B2;
 }
-#user-profile-modal .guilds .section .section-header {
+.userInfoSectionHeader-pmdPGs {
     color: white;
     font-size: 17px;
 }
-#user-profile-modal .guilds .section .connected-accounts .connected-account {
+.theme-dark .connectedAccount-3mKaTA {
     border: 5px outset #F599B2;
     border-radius: 1px;
-    background: #F14E91; 
+    background: #F14E91  !important; 
 }
-#user-profile-modal .guilds .section .connected-accounts .connected-account .connected-account-name-inner .connected-account-name {
+.connectedAccountName-3EFj01 {
     color: white;
     font-size: 19px;
     text-shadow: 3px 2px 2px #000;
@@ -261,7 +244,10 @@
 }
 /* LAST BUT NOT LEAST PART, THE USER POPOUT AND USER PROFILE MODAL */
 .headerNormal-1cioxU,.body-3rkFrF,.footer-2J5zqP {
-    background: rgba(245,153,178,0.6);
+    background: rgba(245,153,178,0.6) !important;
+}
+.headerPlaying-2eYqm9 {
+    background: rgba(0, 0, 255,0.3) !important;
 }
 .botTagInvert-gorWR_ {
     background: #F599B2;
@@ -2182,4 +2168,9 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .invite-button-icon.accepted {
     background-color: rgb(243,60,136);
     border: none;
+}
+.mask-2vyqAW {
+    border-radius: 1;
+    -webkit-mask: none;
+    mask: none;
 }
